--- a/achive_2/docker-compose.yml
+++ b/achive_2/docker-compose.yml
@@ -11,7 +11,19 @@ services:
       - DB_USER=user
       - DB_PASS=pass
       - DB_NAME=rvs
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+
+  app:
+    build: app
     ports:
-      - "5432:5432"
-    volumes:
-     - ./db_tmp:/var/lib/postgresql/data 
+      - "5000:5000"
+    links:
+      - db
+    depends_on:
+      db:
+        condition: service_healthy
