--- a/achive_2/docker-compose.yml
+++ b/achive_2/docker-compose.yml
@@ -7,10 +7,12 @@ services:
     container_name: db
     image:    sameersbn/postgresql:10-2
     environment:
-      - POSTGRES_PASSWORD=docker
-      - DB_USER=user
-      - DB_PASS=pass
-      - DB_NAME=rvs
+      - POSTGRES_PASSWORD=${DB_PG_PASS}
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+      - DB_NAME=${DB_NAME}
+    ports:
+      - "${DB_PORT}:${DB_PORT}"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
@@ -21,9 +23,16 @@ services:
   app:
     build: app
     ports:
-      - "5000:5000"
+      - "${APP_PORT}:5000"
     links:
       - db
+    environment:
+      - DB_USER=${DB_USER}
+      - DB_PASS=${DB_PASS}
+      - DB_URL=db
+      - DB_PORT=${DB_PORT}
+      - DB_NAME=${DB_NAME}
+
     depends_on:
       db:
         condition: service_healthy
